--- a/src/scss/components/_donuts.scss
+++ b/src/scss/components/_donuts.scss
@@ -42,6 +42,8 @@
 		}
 
 		&_image {
+			display: flex;
+			align-items: center;
 			.hiddenImg {
 				animation: spin 0.5s linear;
 				display: none;
